--- a/wedding-fe/src/app/app.component.html
+++ b/wedding-fe/src/app/app.component.html
@@ -1,1 +1,32 @@
-<router-outlet></router-outlet>
+<div class="app-container">
+  <mat-toolbar>
+    <span class="example-spacer"></span>
+    <div fxShow="true" fxHide.lt-md="true">
+      <!-- The following menu items will be hidden on both SM and XS screen sizes -->
+      <button mat-button routerLink="/home" routerLinkActive="active">Home</button>
+      <button mat-button routerLink="/gallery" routerLinkActive="active">Gallery</button>
+      <button mat-button routerLink="/contact-us" routerLinkActive="active">Contact Us</button>
+    </div>
+
+    <div fxShow="true" fxHide.gt-sm="true">
+      <button mat-icon-button class="menu-button" aria-label="Menu button"
+              (click)="sidenav.toggle()">
+        <mat-icon>menu</mat-icon>
+      </button>
+    </div>
+  </mat-toolbar>
+
+  <mat-sidenav-container fxFlexFill class="example-container">
+    <mat-sidenav #sidenav fxLayout="column" position="end">
+      <mat-nav-list (click)="sidenav.close()">
+        <a mat-list-item routerLink="/home" routerLinkActive="active">Home</a>
+        <a mat-list-item routerLink="/gallery" routerLinkActive="active">Gallery</a>
+        <a mat-list-item routerLink="/contact-us" routerLinkActive="active">Contact Us</a>
+      </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content fxFlexFill>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
