--- a/wedding-fe/src/app/app.component.html
+++ b/wedding-fe/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-container">
-  <mat-toolbar>
+  <mat-toolbar class="transparent">
     <span class="example-spacer"></span>
     <div fxShow="true" fxHide.lt-md="true">
       <!-- The following menu items will be hidden on both SM and XS screen sizes -->
