add hero banner to home page

--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="page-container">
+  <div class="hero-banner">
+    <div class="dark-overlay"></div>
+  </div>
+</div>
