--- a/wedding-fe/src/styles.scss
+++ b/wedding-fe/src/styles.scss
@@ -15,6 +15,15 @@ body {
   background: rgba(0,0,0,0);
 }
 
+.dark-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
 mat-toolbar {
   padding: 8px 16px !important;
   position: fixed;
