add banner text for desktop layout

--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -1,5 +1,11 @@
 <div class="page-container">
   <div class="hero-banner">
     <div class="dark-overlay"></div>
+    <div class="hero-banner-text-container">
+      <h3>January 23rd, 2022</h3>
+      <h1>Ryane & Emelyne's</h1>
+      <h1>Wedding Celebration</h1>
+      <button mat-flat-button>RSVP NOW</button>
+    </div>
   </div>
 </div>
