--- a/wedding-fe/src/app/home/home.component.scss
+++ b/wedding-fe/src/app/home/home.component.scss
@@ -4,11 +4,26 @@
 
   .hero-banner {
     width: 100%;
-    height: 500px;
+    height: 70vh;
     background-image: url("/assets/hero-banner-L.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     filter: sepia(0.2);
+
+    .hero-banner-text-container {
+      position: absolute;
+      top: 50%;
+      left: 25%;
+      transform: translate(-25%, -50%);
+      width: 40%;
+      height: 40%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      color: whitesmoke;
+      text-align: center;
+    }
   }
 }
