--- a/wedding-fe/src/app/home/home.component.scss
+++ b/wedding-fe/src/app/home/home.component.scss
@@ -1,6 +1,7 @@
 .page-container {
   width: 100%;
   height: 100%;
+  background: black;
 
   .hero-banner {
     width: 100%;
@@ -13,9 +14,6 @@
 
     .hero-banner-text-container {
       position: absolute;
-      top: 50%;
-      left: 25%;
-      transform: translate(-25%, -50%);
       width: 40%;
       height: 40%;
       display: flex;
@@ -24,6 +22,21 @@
       justify-content: center;
       color: whitesmoke;
       text-align: center;
+
+      // responsive positions
+      transition: left 1s, transform 1s;
+
+      &.position-left {
+        top: 50%;
+        left: 25%;
+        transform: translate(-25%, -50%);
+      }
+
+      &.position-center {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
     }
   }
 }
