--- a/wedding-fe/src/styles.scss
+++ b/wedding-fe/src/styles.scss
@@ -11,6 +11,10 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+h1 {
+  font-size: 48px;
+}
+
 .transparent {
   background: rgba(0,0,0,0);
 }
