--- a/wedding-fe/src/app/home/home.component.scss
+++ b/wedding-fe/src/app/home/home.component.scss
@@ -37,6 +37,10 @@
         left: 50%;
         transform: translate(-50%, -50%);
       }
+
+      h1 {
+        font-family: "Arima Madurai", cursive;
+      }
     }
   }
 }
