skeleton the rest of the home page section blocks

--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="page-container">
-  <div class="hero-banner">
+  <div class="hero-banner section">
     <div class="dark-overlay"></div>
     <div class="hero-banner-text-container"
          [ngClass.lt-md]="'position-center'"
@@ -9,5 +9,11 @@
       <h1>Wedding Celebration</h1>
       <button mat-flat-button>RSVP NOW</button>
     </div>
+  </div>
+  <div class="save-the-date section">
+  </div>
+  <div class="wedding-info section">
+  </div>
+  <div class="ceremony-details section">
   </div>
 </div>
