--- a/wedding-fe/src/app/home/home.component.scss
+++ b/wedding-fe/src/app/home/home.component.scss
@@ -1,11 +1,15 @@
 .page-container {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background: black;
+  display: flex;
+  flex-direction: column;
+
+  .section {
+    flex: 0 0 70vh;
+  }
 
   .hero-banner {
-    width: 100%;
-    height: 70vh;
     background-image: url("/assets/hero-banner-L.jpg");
     background-repeat: no-repeat;
     background-position: center;
@@ -42,5 +46,8 @@
         font-family: "Arima Madurai", cursive;
       }
     }
+  }
+
+  .save-the-date {
   }
 }
