--- a/wedding-fe/src/styles.scss
+++ b/wedding-fe/src/styles.scss
@@ -16,7 +16,7 @@ h1 {
 }
 
 .transparent {
-  background: rgba(0,0,0,0);
+  background: rgba(0, 0, 0, 0);
 }
 
 .dark-overlay {
@@ -26,6 +26,12 @@ h1 {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+}
+
+.section {
+  width: 100%;
+  height: 70vh;
+  background: rgba(255, 255, 255, 0.8);
 }
 
 mat-toolbar {
