--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <div class="hero-banner-text-container"
          [ngClass.lt-md]="'position-center'"
          [ngClass.gt-sm]="'position-left'">
-      <h3>January 23rd, 2022</h3>
+      <h3>January 23<sup>rd</sup>, 2022</h3>
       <h1>Ryane & Emelyne's</h1>
       <h1>Wedding Celebration</h1>
       <button mat-flat-button>RSVP NOW</button>
@@ -14,7 +14,7 @@
     <date-time-countdown
       (countdownComplete)="handleComplete()"
       [targetDateTime]="weddingDateTime"></date-time-countdown>
-    <h2>January 23rd, 2022</h2>
+    <h2>January 23<sup>rd</sup>, 2022</h2>
     <h3>Save The Date</h3>
 
   </div>
