initialise gmap view on regent hotel

--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -27,6 +27,9 @@
   <div class="ceremony-details section" fxLayout="column" fxLayoutAlign="center center">
     <div fxLayout="column" fxLayoutAlign="center center">
       <h2>Ceremony Details</h2>
+      <div class="detail-list">
+      </div>
+      <google-map [options]="gmapOptions"></google-map>
     </div>
   </div>
 </div>
