--- a/wedding-fe/src/app/home/home.component.scss
+++ b/wedding-fe/src/app/home/home.component.scss
@@ -50,4 +50,15 @@
 
   .save-the-date {
   }
+
+  .ceremony-details {
+    .detail-list {
+
+    }
+
+    .map {
+      height: 500px;
+      width: 1200px;
+    }
+  }
 }
