--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -6,7 +6,7 @@
          [ngClass.gt-sm]="'position-left'">
       <h3>January 23<sup>rd</sup>, 2022</h3>
       <h1>Ryane & Emelyne's</h1>
-      <h1>Wedding Celebration</h1>
+      <h1>Wedding Celebration Lunch</h1>
       <button mat-flat-button class="rsvp-btn">RSVP NOW</button>
     </div>
   </div>
@@ -30,16 +30,16 @@
       <div class="detail-list">
         <p><mat-icon>event</mat-icon><span>Sunday, January 23<sup>rd</sup>, 2022</span></p>
         <p><mat-icon>schedule</mat-icon><span>12:00 PM</span></p>
-        <p><mat-icon>location_on</mat-icon><span>Regent Hotel, Singapore</span></p>
-        <p><mat-icon>map</mat-icon><span>1 Cuscaden Rd, Singapore 249715</span>
-          <a href="https://www.google.com/maps/dir//regent+hotel/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31da198bae1f9a05:0x4d99caf56b91c3d0?sa=X&ved=2ahUKEwj3z7KTq77zAhXBXSsKHdRLCVYQ9Rd6BAhqEAQ"
-             target="_blank"
-             class="navigate-link"
-          ><mat-icon>assistant_direction</mat-icon></a>
+        <p><mat-icon>location_on</mat-icon><span>Royal Pavilion Ballroom, The Regent Hotel, Singapore</span></p>
+        <p><mat-icon>map</mat-icon><span>1 Cuscaden Rd, Singapore 249715</span></p>
+        <p><a href="https://www.google.com/maps/dir//regent+hotel/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31da198bae1f9a05:0x4d99caf56b91c3d0?sa=X&ved=2ahUKEwj3z7KTq77zAhXBXSsKHdRLCVYQ9Rd6BAhqEAQ"
+                 target="_blank"
+                 class="navigate-link"
+        ><mat-icon>assistant_direction</mat-icon><span>Get Directions</span></a>
         </p>
         <button mat-flat-button class="rsvp-btn">RSVP NOW</button>
       </div>
-      <google-map [height]="'300px'" [options]="gmapOptions"></google-map>
+      <google-map [height]="'300px'" [options]="gmapOptions" [fxLayout]=""></google-map>
     </div>
   </div>
 </div>
