--- a/wedding-fe/src/styles.scss
+++ b/wedding-fe/src/styles.scss
@@ -8,11 +8,14 @@ body {
 }
 
 body {
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: "Arima Madurai", Roboto, "Helvetica Neue", sans-serif;
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 52px !important;
+  font-weight: bold !important;
+  font-family: 'Tangerine', cursive !important;
+  font-height: 52px;
 }
 
 .transparent {
