--- a/wedding-fe/src/app/utils/date-time-countdown/date-time-countdown.component.html
+++ b/wedding-fe/src/app/utils/date-time-countdown/date-time-countdown.component.html
@@ -3,14 +3,17 @@
     <div class="counter"> {{t.daysToDday}} </div>
     <span>Days</span>
   </div>
+  <div class="counter-seperator">:</div>
   <div class="counter-box">
     <div class="counter"> {{t.hoursToDday}} </div>
     <span>Hours</span>
   </div>
+  <div class="counter-seperator">:</div>
   <div class="counter-box">
     <div class="counter"> {{t.minutesToDday}} </div>
     <span>Mins</span>
   </div>
+  <div class="counter-seperator">:</div>
   <div class="counter-box">
     <div class="counter"> {{t.secondsToDday}} </div>
     <span>Secs</span>
@@ -19,19 +22,22 @@
 <ng-template #blankTimer>
   <div class="timer">
     <div class="counter-box">
-      <div class="days"> 0 </div>
+      <div class="counter"> 0 </div>
       <span>Days</span>
     </div>
+    <div class="counter-seperator">:</div>
     <div class="counter-box">
-      <div class="hours"> 0 </div>
+      <div class="counter"> 0 </div>
       <span>Hours</span>
     </div>
+    <div class="counter-seperator">:</div>
     <div class="counter-box">
-      <div class="minutes"> 0 </div>
+      <div class="counter"> 0 </div>
       <span>Mins</span>
     </div>
+    <div class="counter-seperator">:</div>
     <div class="counter-box">
-      <div class="seconds"> 0 </div>
+      <div class="counter"> 0 </div>
       <span>Secs</span>
     </div>
   </div>
