fix banner line height

--- a/wedding-fe/src/styles.scss
+++ b/wedding-fe/src/styles.scss
@@ -15,7 +15,7 @@ h1 {
   font-size: 52px !important;
   font-weight: bold !important;
   font-family: 'Tangerine', cursive !important;
-  font-height: 52px;
+  line-height: 52px !important;
 }
 
 .transparent {
