--- a/wedding-fe/src/app/home/home.component.scss
+++ b/wedding-fe/src/app/home/home.component.scss
@@ -1,13 +1,14 @@
 .page-container {
   width: 100%;
   min-height: 100%;
-  background: black;
   display: flex;
   flex-direction: column;
+  background: transparent;
 
   .section {
     height: 70vh;
     flex: 1 0 auto;
+    background: transparent;
   }
 
   #hero-banner {
