--- a/wedding-fe/src/app/utils/date-time-countdown/date-time-countdown.component.scss
+++ b/wedding-fe/src/app/utils/date-time-countdown/date-time-countdown.component.scss
@@ -1,3 +1,5 @@
+@use '~@angular/material' as mat;
+
 .timer {
   display: flex;
   flex-direction: row;
@@ -50,6 +52,7 @@
 }
 
 .counter-box {
+  @include mat.elevation(1);
   display: flex;
   flex-direction: column;
   align-items: center;
