add section seperators

--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -10,6 +10,7 @@
       <button mat-flat-button class="rsvp-btn">RSVP NOW</button>
     </div>
   </div>
+  <span class="section-seperator">~<mat-icon>favorite_border</mat-icon>~</span>
   <div id="save-the-date" class="section" fxLayoutAlign="center center">
     <div fxLayout="column" fxLayoutAlign="center center">
       <date-time-countdown
@@ -19,11 +20,13 @@
       <h3>Save The Date</h3>
     </div>
   </div>
+  <span class="section-seperator">~<mat-icon>favorite_border</mat-icon>~</span>
   <div id="wedding-info" class="section" fxLayoutAlign="center center">
     <div fxLayout="column" fxLayoutAlign="center center">
       <h2>Wedding Info</h2>
     </div>
   </div>
+  <span class="section-seperator">~<mat-icon>favorite_border</mat-icon>~</span>
   <div id="ceremony-details" class="section" fxLayout="column" fxLayoutAlign="center center">
     <div fxLayout="column" fxLayoutAlign="center center">
       <h2>Ceremony Details</h2>
