--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <div class="hero-banner-text-container"
          [ngClass.lt-md]="'position-center'"
          [ngClass.gt-sm]="'position-left'">
-      <h3>January 23<sup>rd</sup>, 2022</h3>
+      <h3>Sunday, January 23<sup>rd</sup>, 2022</h3>
       <h1>Ryane & Emelyne's</h1>
       <h1>Wedding Celebration Lunch</h1>
       <button mat-flat-button class="rsvp-btn">RSVP NOW</button>
@@ -16,8 +16,9 @@
       <date-time-countdown
         (countdownComplete)="handleComplete()"
         [targetDateTime]="weddingDateTime"></date-time-countdown>
-      <h2>January 23<sup>rd</sup>, 2022</h2>
+      <h2>Sunday, January 23<sup>rd</sup>, 2022</h2>
       <h3>Save The Date</h3>
+      <h3>RSVP BY Thursday, 23<sup>rd</sup> December 2021</h3>
     </div>
   </div>
   <span class="section-seperator">~<mat-icon>favorite_border</mat-icon>~</span>
