section height on ID

--- a/wedding-fe/src/app/home/home.component.scss
+++ b/wedding-fe/src/app/home/home.component.scss
@@ -11,6 +11,8 @@
   }
 
   #hero-banner {
+    height: 70vh;
+
     background-image: url("/assets/hero-banner-L.jpg");
     background-repeat: no-repeat;
     background-position: center;
