gallery preview skeleton section

--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -70,4 +70,9 @@
       They’re so excited to <em>finally</em> start the next phase of their lives together and can’t wait to celebrate with you to happen.
     </p>
   </div>
+  <span class="section-seperator">~<mat-icon>favorite_border</mat-icon>~</span>
+  <div id="gallery-preview" class="section" fxLayout="column" fxLayoutAlign="center center">
+    <h2>Gallery</h2>
+
+  </div>
 </div>
