style text content sections

--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -23,7 +23,7 @@
   </div>
   <span class="section-seperator">~<mat-icon>favorite_border</mat-icon>~</span>
   <div id="wedding-info" class="section" fxLayoutAlign="center center">
-    <div fxLayout="column" fxLayoutAlign="center center">
+    <div class="text-content" fxLayout="column" fxLayoutAlign="center center">
       <h2>Wedding Info</h2>
       <div class="infospace">
         <h3>DRESS CODE: Dress to Impress</h3>
@@ -39,14 +39,25 @@
     <div fxLayout="column" fxLayoutAlign="center center">
       <h2>Ceremony Details</h2>
       <div class="detail-list">
-        <p><mat-icon>event</mat-icon><span>Sunday, January 23<sup>rd</sup>, 2022</span></p>
-        <p><mat-icon>schedule</mat-icon><span>12:00 PM</span></p>
-        <p><mat-icon>location_on</mat-icon><span>Royal Pavilion Ballroom, The Regent Hotel, Singapore</span></p>
-        <p><mat-icon>map</mat-icon><span>1 Cuscaden Rd, Singapore 249715</span></p>
-        <p><a href="https://www.google.com/maps/dir//regent+hotel/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31da198bae1f9a05:0x4d99caf56b91c3d0?sa=X&ved=2ahUKEwj3z7KTq77zAhXBXSsKHdRLCVYQ9Rd6BAhqEAQ"
-                 target="_blank"
-                 class="navigate-link"
-        ><mat-icon>assistant_direction</mat-icon><span>Get Directions</span></a>
+        <p>
+          <mat-icon>event</mat-icon>
+          <span>Sunday, January 23<sup>rd</sup>, 2022</span></p>
+        <p>
+          <mat-icon>schedule</mat-icon>
+          <span>12:00 PM</span></p>
+        <p>
+          <mat-icon>location_on</mat-icon>
+          <span>Royal Pavilion Ballroom, The Regent Hotel, Singapore</span></p>
+        <p>
+          <mat-icon>map</mat-icon>
+          <span>1 Cuscaden Rd, Singapore 249715</span></p>
+        <p><a
+          href="https://www.google.com/maps/dir//regent+hotel/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31da198bae1f9a05:0x4d99caf56b91c3d0?sa=X&ved=2ahUKEwj3z7KTq77zAhXBXSsKHdRLCVYQ9Rd6BAhqEAQ"
+          target="_blank"
+          class="navigate-link"
+        >
+          <mat-icon>assistant_direction</mat-icon>
+          <span>Get Directions</span></a>
         </p>
         <button mat-flat-button class="rsvp-btn">RSVP NOW</button>
       </div>
@@ -55,20 +66,28 @@
   </div>
   <span class="section-seperator">~<mat-icon>favorite_border</mat-icon>~</span>
   <div id="our-story" class="section" fxLayout="column" fxLayoutAlign="center center">
-    <h2>Our Story</h2>
-    <p>
-      Ryane and Emelyne met in 2005 in the first year of secondary school. With piercing eyes, melancholic stature, a good sense of humour and a great face, Ryane was a fun person to be with. He found Emelyne to complement him with a bubbly yet carefree nature, punny with an even prettier face and just as loud.
-      He eventually left to Australia in 2006 with his family and maintaining contact was only by the means of an msn chat platform or costly IDD calling cards.
-    </p>
-    <p>
-      However, it wasn’t until the Christmas of 2008 that locked in their persistance to maintain a long distance relationship until Ryane decided to return home (to Emelyne) and serve the nation in 2010.
-    </p>
-    <p>
-      As luck would have it, they both were able further their university education in Australia and the rest, as they say, is history.
-    </p>
-    <p>
-      They’re so excited to <em>finally</em> start the next phase of their lives together and can’t wait to celebrate with you to happen.
-    </p>
+    <div class="text-content" fxLayout="column" fxLayoutAlign="center center">
+      <h2>Our Story</h2>
+      <p>
+        Ryane and Emelyne met in 2005 in the first year of secondary school. With piercing eyes, melancholic stature, a
+        good sense of humour and a great face, Ryane was a fun person to be with. He found Emelyne to complement him
+        with a bubbly yet carefree nature, punny with an even prettier face and just as loud.
+        He eventually left to Australia in 2006 with his family and maintaining contact was only by the means of an msn
+        chat platform or costly IDD calling cards.
+      </p>
+      <p>
+        However, it wasn’t until the Christmas of 2008 that locked in their persistance to maintain a long distance
+        relationship until Ryane decided to return home (to Emelyne) and serve the nation in 2010.
+      </p>
+      <p>
+        As luck would have it, they both were able further their university education in Australia and the rest, as they
+        say, is history.
+      </p>
+      <p>
+        They’re so excited to <em>finally</em> start the next phase of their lives together and can’t wait to celebrate
+        with you to happen.
+      </p>
+    </div>
   </div>
   <span class="section-seperator">~<mat-icon>favorite_border</mat-icon>~</span>
   <div id="gallery-preview" class="section" fxLayout="column" fxLayoutAlign="center center">
