--- a/wedding-fe/src/app/home/home.component.scss
+++ b/wedding-fe/src/app/home/home.component.scss
@@ -1,3 +1,24 @@
+.portrait-image-container {
+  height: 400px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &.small {
+    max-width: 300px;
+  }
+
+  &.large {
+    max-width: 500px;
+  }
+
+  img {
+    height: 100%;
+    width: auto;
+  }
+}
+
 .page-container {
   width: 100%;
   min-height: 100%;
