--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -23,14 +23,24 @@
   </div>
   <span class="section-seperator">~<mat-icon>favorite_border</mat-icon>~</span>
   <div id="wedding-info" class="section" fxLayoutAlign="center center">
-    <div class="text-content" fxLayout="column" fxLayoutAlign="center center">
-      <h2>Wedding Info</h2>
-      <div class="infospace">
-        <h3>DRESS CODE: Dress to Impress</h3>
-        <p>We wish we could include everyone but unfortunately,
-          due to the venue and the evolving COVID 19 restrictions,
-          we are only able to invite individuals who are vaccinated.
-          We hope you understand and use this opportunity to let your hair down and have a good time!</p>
+    <div [gdAreas.gt-sm]="'content image'"
+         [gdColumn.gt-sm]="'auto'"
+         [gdAreas.lt-md]="'content | image'"
+         [gdColumn.lt-md]="'500px 500px'"
+         [gdGap]="'20px'">
+      <div class="text-content" fxLayout="column" fxLayoutAlign="center center" [gdArea]="'content'">
+        <h2>Wedding Info</h2>
+        <div class="infospace">
+          <h3>DRESS CODE: Dress to Impress</h3>
+          <p>We wish we could include everyone but unfortunately,
+            due to the venue and the evolving COVID 19 restrictions,
+            we are only able to invite individuals who are vaccinated.
+            We hope you understand and use this opportunity to let your hair down and have a good time!</p>
+        </div>
+      </div>
+      <div class="portrait-image-container"
+           [gdArea]="'image'">
+        <img src="assets/umbrella-m.jpg">
       </div>
     </div>
   </div>
