--- a/wedding-fe/src/app/home/home.component.scss
+++ b/wedding-fe/src/app/home/home.component.scss
@@ -92,8 +92,16 @@
     }
 
     .map {
-      height: 500px;
-      width: 1200px;
+      width: 100%;
+
+      &.large {
+        height: 450px;
+        width: 650px;
+      }
+
+      &.small {
+        height: 300px;
+      }
     }
   }
 }
