--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -89,28 +89,22 @@
       </div>
       <div class="text-content" fxLayout="column" fxLayoutAlign="center center" [gdArea]="'content'">
         <h2>Our Story</h2>
-        <p>
-          Ryane and Emelyne met in 2005 in the first year of secondary school. With piercing eyes, melancholic stature,
-          a
-          good sense of humour and a great face, Ryane was a fun person to be with. He found Emelyne to complement him
+        <p>Ryane and Emelyne met in 2005 in the first year of secondary school. With piercing eyes, melancholic stature,
+          a good sense of humour and a great face, Ryane was a fun person to be with. He found Emelyne to complement him
           with a bubbly yet carefree nature, punny with an even prettier face and just as loud.
-          He eventually left to Australia in 2006 with his family and maintaining contact was only by the means of an
-          msn
-          chat platform or costly IDD calling cards.
+          He eventually left for Australia in 2006 with his family and maintaining contact was only by the means of an
+          MSN chat platform or costly IDD calling cards.
         </p>
-        <p>
-          However, it wasn’t until the Christmas of 2008 that locked in their persistance to maintain a long distance
+        <p>However, it wasn’t until the Christmas of 2008 that locked in their persistence to maintain a long-distance
           relationship until Ryane decided to return home (to Emelyne) and serve the nation in 2010.
         </p>
         <p>
-          As luck would have it, they both were able further their university education in Australia and the rest, as
-          they
-          say, is history.
+          As luck would have it, they both were able to further their university education in Australia and the rest, as
+          they say, is history.
         </p>
         <p>
           They’re so excited to <em>finally</em> start the next phase of their lives together and can’t wait to
-          celebrate
-          with you to happen.
+          celebrate with you to happen.
         </p>
       </div>
     </div>
