add share our day info

--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -37,6 +37,10 @@
             we are only able to invite individuals who are vaccinated.
             We hope you understand and use this opportunity to let your hair down and have a good time!</p>
         </div>
+        <h2>Share Our Day</h2>
+        <div class="infospace">
+          <p>Share your pictures on the day with #RYANEEME22 on your socials</p>
+        </div>
       </div>
       <div class="portrait-image-container"
            [gdArea]="'image'">
