--- a/wedding-fe/src/app/app.component.html
+++ b/wedding-fe/src/app/app.component.html
@@ -4,7 +4,7 @@
       <mat-nav-list (click)="sidenav.close()">
         <a mat-list-item routerLink="/home" routerLinkActive="active">Home</a>
         <a mat-list-item routerLink="/gallery" routerLinkActive="active">Gallery</a>
-        <a mat-list-item routerLink="/contact-us" routerLinkActive="active">Contact Us</a>
+        <a mat-list-item routerLink="/rsvp" routerLinkActive="active">RSVP</a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content fxFlexFill>
@@ -14,7 +14,7 @@
           <!-- The following menu items will be hidden on both SM and XS screen sizes -->
           <button mat-button routerLink="/home" routerLinkActive="active">Home</button>
           <button mat-button routerLink="/gallery" routerLinkActive="active">Gallery</button>
-          <button mat-button routerLink="/contact-us" routerLinkActive="active">Contact Us</button>
+          <button mat-button routerLink="/rsvp" routerLinkActive="active">RSVP</button>
         </div>
 
         <div fxShow="true" fxHide.gt-sm="true">
