--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -7,7 +7,7 @@
       <h3>Sunday, January 23<sup>rd</sup>, 2022</h3>
       <h1>Ryane & Emelyne's</h1>
       <h1>Wedding Celebration Lunch</h1>
-      <a mat-flat-button class="rsvp-btn" [routerLink]="'/rsvp'">RSVP NOW</a>
+      <button mat-flat-button class="rsvp-btn" [routerLink]="'/rsvp'">RSVP NOW</button>
     </div>
   </div>
   <span class="section-seperator">~<mat-icon>favorite_border</mat-icon>~</span>
@@ -73,7 +73,7 @@
           <mat-icon>assistant_direction</mat-icon>
           <span>Get Directions</span></a>
         </p>
-        <a mat-flat-button class="rsvp-btn" [routerLink]="'/rsvp'">RSVP NOW</a>
+        <button mat-flat-button class="rsvp-btn" [routerLink]="'/rsvp'">RSVP NOW</button>
       </div>
       <google-map class="map" height="null" width="null" [options]="gmapOptions"
                   [ngClass.gt-sm]="'large'"
