update RSVP date

--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -18,7 +18,7 @@
         [targetDateTime]="weddingDateTime"></date-time-countdown>
       <h2>Sunday, January 23<sup>rd</sup>, 2022</h2>
       <h3>Save The Date</h3>
-      <h3>RSVP BY Thursday, 23<sup>rd</sup> December 2021</h3>
+      <h3>RSVP by Friday, 31<sup>st</sup> December 2021</h3>
     </div>
   </div>
   <span class="section-seperator">~<mat-icon>favorite_border</mat-icon>~</span>
