--- a/wedding-fe/src/app/app.component.html
+++ b/wedding-fe/src/app/app.component.html
@@ -8,7 +8,7 @@
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content fxFlexFill>
-      <mat-toolbar class="transparent">
+      <mat-toolbar class="menu-bar">
         <span class="example-spacer"></span>
         <div fxShow="true" fxHide.lt-md="true">
           <!-- The following menu items will be hidden on both SM and XS screen sizes -->
