--- a/wedding-fe/src/styles.scss
+++ b/wedding-fe/src/styles.scss
@@ -18,8 +18,9 @@ h1 {
   line-height: 52px !important;
 }
 
-.transparent {
-  background: rgba(0, 0, 0, 0);
+.menu-bar {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 30%, rgba(255, 255, 255, 0) 100%);
 }
 
 .dark-overlay {
