word-case for dress code

--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -31,7 +31,7 @@
       <div class="text-content" fxLayout="column" fxLayoutAlign="center center" [gdArea]="'content'">
         <h2>Wedding Info</h2>
         <div class="infospace">
-          <h3>DRESS CODE: Dress to Impress</h3>
+          <h3>Dress Code: Dress to Impress</h3>
           <p>We wish we could include everyone but unfortunately,
             due to the venue and the evolving COVID 19 restrictions,
             we are only able to invite individuals who are vaccinated.
