--- a/wedding-fe/src/app/gallery/gallery.component.html
+++ b/wedding-fe/src/app/gallery/gallery.component.html
@@ -1,11 +1,10 @@
 <div class="page-container">
   <div class="grid-gallery">
-    <div class="grid-item" *ngFor="let image of images; let i = index"
-    (click)="lightbox.open(i, 'lightbox', {panelClass: 'fullscreen'})">
+    <div class="grid-item" *ngFor="let image of images; let i = index">
       <img [src]="image.data.thumb"
            [attr.imageSrc]="image.data.src"
-           [attr.thumbSrc]="image.data.thumb">
+           [attr.thumbSrc]="image.data.thumb"
+           (click)="lightbox.open(i, 'lightbox', {panelClass: 'fullscreen'})">
     </div>
-
   </div>
 </div>
